# oxide-pdf-arranger

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  components.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml
crates/pdf-arranger-core/: Cargo.toml
crates/pdf-arranger-core/src/: lib.rs
crates/pdf-crop/: Cargo.toml
crates/pdf-crop/src/: lib.rs
docs/: api.md  distribution.md  release-notes.md  user-manual.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/ui/: badge.tsx  button.tsx
src/features/backend/api/: pdfBackend.ts
src/features/backend/components/: BackendWorkspace.tsx
src/features/backend/types/: pdf.ts
src/features/crop/components/: CropEditorModal.test.tsx  CropEditorModal.tsx
src/features/crop/lib/: cropEditor.test.ts  cropEditor.ts
src/features/documents/components/: PageGrid.tsx
src/features/documents/lib/: actionHistory.test.ts  actionHistory.ts  historySnapshots.test.ts  historySnapshots.ts  rotationPreview.test.ts  rotationPreview.ts  touchGestures.test.ts  touchGestures.ts  virtualGrid.bench.ts  virtualGrid.test.ts  virtualGrid.ts  workspaceDocuments.test.ts  workspaceDocuments.ts  workspacePersistence.test.ts  workspacePersistence.ts
src/features/documents/store/: pdfDocumentStore.ts
src/features/files/lib/: dialogSelection.test.ts  dialogSelection.ts  recentFiles.test.ts  recentFiles.ts
src/features/images/lib/: imageImport.test.ts  imageImport.ts
src/features/workspace/hooks/: useWorkspaceTheme.ts
src/features/workspace/lib/: theme.test.ts  theme.ts
src/shared/lib/: tauri.ts
tests/e2e/: app-smoke.spec.ts
