[package]
name = "oxide-pdf-arranger"
version = "0.1.0"
description = "Cross-platform PDF page arranger built on Oxide-PDF and Tauri"
authors = ["Oxide-PDF Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alitrack/oxide-pdf-arranger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oxide_pdf_arranger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-core = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-merge = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-split = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-rotate = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
