[package]
name = "pdf-arranger-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Oxide-PDF Contributors"]
repository = "https://github.com/alitrack/oxide-pdf-arranger"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp"] }
lopdf = { version = "0.39", features = ["embed_image"] }
pdf-core = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-crop = { path = "../pdf-crop" }
pdf-merge = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-page-range = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-rotate = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
pdf-split = { git = "https://github.com/alitrack/oxide-pdf.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1.0"
tracing = "0.1"
